--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,79 +1,79 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
 * {
-    scroll-behavior: smooth;
+  scroll-behavior: smooth;
 }
 
 body {
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
-        Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-    background: #F6F6F5;
-    scroll-behavior: smooth;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  background: #f6f6f5;
+  scroll-behavior: smooth;
 }
 
 input,
 select {
-    outline: none;
+  outline: none;
 }
 
 .batch_heart {
-    background: tomato;
-    width: 15px;
-    height: 15px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    border-radius: 100%;
-    position: absolute;
-    right: -24%;
-    top: -9%;
-    cursor: pointer;
+  background: tomato;
+  width: 15px;
+  height: 15px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 100%;
+  position: absolute;
+  right: -24%;
+  top: -9%;
+  cursor: pointer;
 }
 
 /* Chrome, Safari, Edge, Opera */
 input::-webkit-outer-spin-button,
 input::-webkit-inner-spin-button {
-    -webkit-appearance: none;
-    margin: 0;
+  -webkit-appearance: none;
+  margin: 0;
 }
 
 /* Firefox */
-input[type=number] {
-    -moz-appearance: textfield;
+input[type="number"] {
+  -moz-appearance: textfield;
 }
 
 .input-with-icon {
-    padding-right: 2.5rem !important;
+  padding-right: 2.5rem !important;
 }
 
 .icon-container {
-    font-size: 20px;
-    position: absolute;
-    top: 70%;
-    right: 0.75rem;
-    transform: translateY(-50%);
-    cursor: pointer;
+  font-size: 20px;
+  position: absolute;
+  top: 70%;
+  right: 0.75rem;
+  transform: translateY(-50%);
+  cursor: pointer;
 }
 
 .input-container {
-    position: relative;
+  position: relative;
 }
 
 .input-with-icon-container {
-    position: relative;
-    margin-bottom: 30px !important;
+  position: relative;
+  margin-bottom: 30px !important;
 }
 
 .error-message {
-    position: absolute;
-    bottom: -1.3rem;
-    left: 0;
-    font-size: 0.875rem;
-    font-weight: 400;
-    --tw-text-opacity: 1;
-    color: rgb(239 68 68 / var(--tw-text-opacity));
+  position: absolute;
+  bottom: -1.3rem;
+  left: 0;
+  font-size: 0.875rem;
+  font-weight: 400;
+  --tw-text-opacity: 1;
+  color: rgb(239 68 68 / var(--tw-text-opacity));
 }
