--- a/frontend/src/components/Register/SignUp.css
+++ b/frontend/src/components/Register/SignUp.css
@@ -29,31 +29,6 @@
   box-shadow: rgba(0, 0, 0, 0.05) 0px 1px 2px 0px;
 }
 
-.country-dropdown button {
-  width: 100%;
-  padding: 6px;
-  border-radius: 0.5rem;
-  --tw-bg-opacity: 1;
-  --tw-border-opacity: 1;
-  border-color: rgb(209 213 219 / var(--tw-border-opacity));
-  background-color: rgb(249 250 251 / var(--tw-bg-opacity));
-  color: rgb(17 24 39 / var(--tw-text-opacity));
-}
-
-.country-dropdown button:focus-within {
-  --tw-border-opacity: 1;
-  outline: none;
-  border-color: rgb(253 151 170 / var(--tw-border-opacity));
-}
-
-.country-dropdown ul {
-  border-radius: 0.5rem;
-  --tw-bg-opacity: 1;
-  --tw-border-opacity: 1;
-  border-color: rgb(209 213 219 / var(--tw-border-opacity));
-  color: rgb(17 24 39 / var(--tw-text-opacity));
-}
-
 .progress-bar{
   height: 3px;
 }
@@ -68,4 +43,14 @@
 .userMobile .react-international-phone-country-selector button{
   padding: 22px 10px;
   border-radius: 0.5rem 0 0 0.5rem;
+}
+
+.userMobile.error-show .react-international-phone-input {
+  border-color: rgb(248 10 55);
+  background-color: rgb(255 243 245);
+}
+
+.userMobile.error-show .react-international-phone-country-selector button {
+  border-color: rgb(248 10 55);
+  background-color: rgb(255 243 245);
 }
