SignUp page completed

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -77,3 +77,7 @@ input[type="number"] {
   --tw-text-opacity: 1;
   color: rgb(239 68 68 / var(--tw-text-opacity));
 }
+
+.activate-icon{
+  margin: 0 auto;
+}
