--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -46,6 +46,36 @@ input[type="number"] {
   -moz-appearance: textfield;
 }
 
+/* Hide scrollbar track */
+::-webkit-scrollbar {
+  width: 8px; /* Width of the scrollbar */
+  height: 8px; /* Height of the scrollbar (for horizontal scrollbars) */
+}
+
+/* Customize scrollbar thumb */
+::-webkit-scrollbar-thumb {
+  background-color: #bdbdbd; /* Color of the thumb */
+  border-radius: 10px; /* Rounded corners for the thumb */
+  border: 2px solid transparent; /* Transparent border to provide spacing around the thumb */
+  background-clip: padding-box; /* Avoids border overlapping the thumb */
+}
+
+/* Customize scrollbar thumb on hover */
+::-webkit-scrollbar-thumb:hover {
+  background-color: #9a9a9a; /* Darker color on hover */
+}
+
+/* Hide scrollbar track (for horizontal scrollbars) */
+::-webkit-scrollbar-track {
+  background: transparent; /* Hide the track */
+}
+
+/* Hide scrollbar track (for vertical scrollbars) */
+::-webkit-scrollbar-track:horizontal {
+  background: transparent; /* Hide the track */
+}
+
+
 .input-with-icon {
   padding-right: 2.5rem !important;
 }
@@ -81,3 +111,4 @@ input[type="number"] {
 .activate-icon{
   margin: 0 auto;
 }
+
