Best Deals part done

--- a/frontend/src/components/Layout/layout.css
+++ b/frontend/src/components/Layout/layout.css
@@ -1,27 +1,31 @@
-.cart-badge{
-    width: 18px;
-    height: 18px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    background-color: #dc2626;
-    font-size: 11px;
-    color: #FFF;
-    border-radius: 50%;
-    position: absolute;
-    left: 20px;
+.cart-badge {
+  width: 18px;
+  height: 18px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: #dc2626;
+  font-size: 11px;
+  color: #fff;
+  border-radius: 50%;
+  position: absolute;
+  left: 20px;
 }
 
-.eshop__indicator-separator{
-    display: none;
+.eshop__indicator-separator {
+  display: none;
 }
 
-.notifications-dot{
-    width: 8px;
-    height: 8px;
-    background-color: #dc2626;
-    border-radius: 50%;
-    position: absolute;
-    left: 18px;
-    top: 8px;
+.notifications-dot {
+  width: 8px;
+  height: 8px;
+  background-color: #dc2626;
+  border-radius: 50%;
+  position: absolute;
+  left: 18px;
+  top: 8px;
+}
+
+.main-navbar {
+  z-index: 9999;
 }
