--- a/frontend/src/components/Route/ProductCard/productCard.css
+++ b/frontend/src/components/Route/ProductCard/productCard.css
@@ -7,7 +7,7 @@
 .pcard-image {
   width: 100%;
   height: 100%;
-  object-fit: contain;
+  object-fit: cover;
   background-position: center center;
   background-repeat: no-repeat;
 }
@@ -15,7 +15,7 @@
 .pcard-shopName {
   font-size: 13px;
   font-weight: 400;
-  color: #9ca3af;
+  color: #878787;
   margin-bottom: 3px;
 }
 
@@ -52,11 +52,11 @@
 
 .pcard-price {
   font-size: 13px;
-  color: #d55b45;
+  color: #878787;
   text-decoration: line-through;
 }
 
-.pcard-sold-wrap {
+.pcard-discount {
   font-size: 12px;
   color: #16a34a;
 }
