--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -117,7 +117,7 @@ input[type="number"] {
   left: -1px;
   height: 80px;
   width: 30px;
-  border-radius: 0 5px 5px 0;
+  border-radius: 0 8px 8px 0;
   color: #000;
   top: 50%;
   transform: translate(0, -30%);
@@ -133,7 +133,7 @@ input[type="number"] {
   right: -1px;
   height: 80px;
   width: 30px;
-  border-radius: 5px 0 0 5px;
+  border-radius: 8px 0 0 8px;
   color: #000;
   top: 50%;
   transform: translate(0, -30%);
@@ -166,7 +166,7 @@ input[type="number"] {
 }
 
 
-.pcard-rating-separator{
+.rating-separator{
   width: 1.2px;
   background: rgba(0, 0, 0, 0.3);
   height: 12px;
