--- a/frontend/src/components/Route/ProductDetailsCard/productDetailsCard.css
+++ b/frontend/src/components/Route/ProductDetailsCard/productDetailsCard.css
@@ -48,7 +48,7 @@
 .pcarddetails-img{
   width: 100%;
   height: 320px;
-  object-fit: cover;
+  object-fit: contain;
   background-position: center center;
   background-repeat: no-repeat;
 }
@@ -98,7 +98,7 @@ background-color: #F1F6FF;
   width: 55px;
   height: 55px;
   cursor: pointer;
-  object-fit: cover;
+  object-fit: contain;
   opacity: 0.4;
 }
 
