side bar and best deal page done

--- a/frontend/src/components/Layout/layout.css
+++ b/frontend/src/components/Layout/layout.css
@@ -33,3 +33,13 @@
 .payment-method-img{
   height: 16px;
 }
+
+.footer-appImg{
+  width: auto;
+  height: 35px;
+}
+
+.sidebar-title-wrapper{
+  border-bottom: 1px solid #e5e7eb;
+  margin-bottom: 8px;
+}
