--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -95,7 +95,6 @@ input[type="number"] {
 
 .input-with-icon-container {
   position: relative;
-  margin-bottom: 30px !important;
 }
 
 .error-message {
@@ -165,9 +164,20 @@ input[type="number"] {
   text-overflow: ellipsis;
 }
 
-
 .rating-separator{
   width: 1.2px;
   background: rgba(0, 0, 0, 0.3);
   height: 12px;
+}
+
+.mb-16{
+  margin-bottom: 16px !important;
+}
+
+.mb-20{
+  margin-bottom: 20px !important;
+}
+
+.mb-30{
+  margin-bottom: 30px !important;
 }
