--- a/frontend/src/models/ProductDetailsCard/productDetailsCard.css
+++ b/frontend/src/models/ProductDetailsCard/productDetailsCard.css
@@ -4,7 +4,8 @@
   left: 0;
   width: 100%;
   height: 100vh;
-  background-color: rgba(0, 0, 0, 0.5);
+  /* background-color: rgba(0, 0, 0, 0.5); */
+  background-color: #0000004b;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -24,8 +25,8 @@
 
 .close-icon {
   position: fixed;
-  top: 13%;
-  right: 20.3%;
+  top: 13.5%;
+  right: 20.5%;
   font-size: 30px;
   cursor: pointer;
   z-index: 10000;
