user address part added

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -235,3 +235,9 @@ input[type="number"] {
   color: #000;
   border-radius: 0.5rem;
 }
+
+/* .add-address-wrapper{
+  padding: 5px;
+  border: 1px dashed #c9d8fc;
+  border-radius: 0.5rem;
+} */
