--- a/frontend/src/models/ProductDetailsCard/productDetailsCard.css
+++ b/frontend/src/models/ProductDetailsCard/productDetailsCard.css
@@ -41,7 +41,7 @@
 }
 
 .pcarddetails-img-wrap{
-  border: 1px solid #e5e7eb;
+  border: 1px dashed #c9d8fc;
   border-radius: 8px;
   padding: 3px;
 }
