--- a/frontend/src/components/Accounts/Accounts.css
+++ b/frontend/src/components/Accounts/Accounts.css
@@ -73,10 +73,13 @@
     font-weight: 500;
   }
   
-  .wishlist-delete{
+  .wishlist-delete {
     position: absolute;
     top: 10px;
     right: 10px;
     cursor: pointer;
     font-size: 18px;
+    padding: 5px;
+    border-radius: 50%;
+    transition: all 0.2s ease-in-out;
   }
