--- a/frontend/src/components/Events/events.css
+++ b/frontend/src/components/Events/events.css
@@ -1,8 +1,8 @@
 .eventImg{
     width: 100%;
     height: 320px;
-    -o-object-fit: contain;
-    object-fit: contain;
+    -o-object-fit: cover;
+    object-fit: cover;
     background-position: center center;
     background-repeat: no-repeat;
 }
