--- a/frontend/src/components/Products/ProductDetails.css
+++ b/frontend/src/components/Products/ProductDetails.css
@@ -7,7 +7,7 @@
 .productDetails-img {
   width: 100%;
   height: 320px;
-  object-fit: contain;
+  object-fit: cover;
   background-position: center center;
   background-repeat: no-repeat;
 }
@@ -57,7 +57,7 @@
   width: 55px;
   height: 55px;
   cursor: pointer;
-  object-fit: contain;
+  object-fit: cover;
   opacity: 0.4;
   margin: 0 5px;
 }
