--- a/frontend/src/components/Route/ProductCard/productCard.css
+++ b/frontend/src/components/Route/ProductCard/productCard.css
@@ -7,7 +7,7 @@
 .pcard-image {
   width: 100%;
   height: 100%;
-  object-fit: contain;
+  object-fit: cover;
   background-position: center center;
   background-repeat: no-repeat;
 }
