--- a/frontend/src/components/Route/Suggestion/suggestionCard.css
+++ b/frontend/src/components/Route/Suggestion/suggestionCard.css
@@ -1,8 +1,8 @@
 .suggested-img{
     width: 100%;
     height: 80px;
-    -o-object-fit: contain;
-    object-fit: contain;
+    -o-object-fit: cover;
+    object-fit: cover;
     background-position: center center;
     background-repeat: no-repeat;
 }
