--- a/frontend/src/models/ProductDetailsCard/productDetailsCard.css
+++ b/frontend/src/models/ProductDetailsCard/productDetailsCard.css
@@ -49,7 +49,7 @@
 .pcarddetails-img{
   width: 100%;
   height: 320px;
-  object-fit: contain;
+  object-fit: cover;
   background-position: center center;
   background-repeat: no-repeat;
 }
@@ -99,7 +99,7 @@ background-color: #F1F6FF;
   width: 55px;
   height: 55px;
   cursor: pointer;
-  object-fit: contain;
+  object-fit: cover;
   opacity: 0.4;
 }
 
