--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -13,6 +13,7 @@ body {
     Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   background: rgb(243 244 246);
   scroll-behavior: smooth;
+  font-size: 15px;
 }
 
 input,
