--- a/frontend/src/models/RegisterModel/RegisterModel.css
+++ b/frontend/src/models/RegisterModel/RegisterModel.css
@@ -1,29 +1,52 @@
 .register-overlay {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100vh;
-    background-color: rgba(0, 0, 0, 0.5);
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    z-index: 9999;
-  }
-  
-  .register-close {
-    position: fixed;
-    top: 2%;
-    right: 33.5%;
-    font-size: 30px;
-    cursor: pointer;
-    z-index: 10000;
-    background-color: #fff;
-    padding: 6px;
-    border-radius: 100px;
-    transition: all 0.2s ease-in-out;
-  }
-  
-  .register-close:hover {
-    background-color: #f5f5f5;
-  }
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100vh;
+  background-color: rgba(0, 0, 0, 0.5);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  z-index: 9999;
+}
+
+.register-close {
+  position: fixed;
+  top: 2%;
+  right: 33.5%;
+  font-size: 30px;
+  cursor: pointer;
+  z-index: 10000;
+  background-color: #fff;
+  padding: 6px;
+  border-radius: 100px;
+  transition: all 0.2s ease-in-out;
+}
+
+.register-close:hover {
+  background-color: #f5f5f5;
+}
+
+.userMobile .react-international-phone-input {
+  padding: 20px 10px !important;
+  font-size: 100%;
+  width: 100%;
+  font-size: 15px !important;
+  border-radius: 0 0.5rem 0.5rem 0;
+}
+
+.userMobile .react-international-phone-country-selector button {
+  padding: 20px 10px;
+  border-radius: 0.5rem 0 0 0.5rem;
+}
+
+.userMobile.error-show .react-international-phone-input {
+  border-color: rgb(248 10 55);
+  background-color: rgb(255 243 245);
+}
+
+.userMobile.error-show .react-international-phone-country-selector button {
+  border-color: rgb(248 10 55);
+  background-color: rgb(255 243 245);
+}
