--- a/frontend/src/components/Route/Profile/Accounts.css
+++ b/frontend/src/components/Route/Profile/Accounts.css
@@ -1,85 +1,106 @@
-
 .address-menu-icon {
-    position: absolute;
-    top: 5px;
-    right: 5px;
-    padding: 6px;
-    border-radius: 100%;
-    font-size: 15px;
-    background: transparent;
-    cursor: pointer;
-    background: transparent;
-    color: #64748b;
-  }
-  
-  .address-menu {
-    position: absolute;
-    top: 5px;
-    right: 10px;
-    background: #ffffff;
-    width: 100px;
-    border-radius: 5px;
-    padding: 3px;
-    cursor: pointer;
-    box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
-  }
-  
-  .wishlist-image {
-    width: 120px;
-    height: 120px;
-    object-fit: contain;
-    background-position: center center;
-    background-repeat: no-repeat;
-  }
-  
-  .wishlist-rating {
-    font-size: 12px;
-    color: #fff;
-    background-color: #4a51e1;
-    border-radius: 50px;
-    padding: 1.5px 10px;
-  }
-  
-  
-  .wishlist-price-wrap {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    gap: 5px;
-  }
-  
-  .wishlist-price {
-    font-size: 13px;
-    color: #878787;
-    font-weight: 500;
-    text-decoration: line-through;
-  }
-  
-  .wishlist-discount {
-    font-size: 12px;
-    font-weight: 500;
-    color: #16a34a;
-  }
-  
-  .wishlist-icon {
-    width: 20px;
-    height: 20px;
-    cursor: pointer;
-    transition: all 0.2s ease-in-out;
-  }
-  
-  .wishlist-discount_price {
-    font-size: 20px;
-    font-weight: 500;
-  }
-  
-  .wishlist-delete {
-    position: absolute;
-    top: 10px;
-    right: 10px;
-    cursor: pointer;
-    font-size: 18px;
-    padding: 5px;
-    border-radius: 50%;
-    transition: all 0.2s ease-in-out;
-  }
+  position: absolute;
+  top: 5px;
+  right: 5px;
+  padding: 6px;
+  border-radius: 100%;
+  font-size: 15px;
+  background: transparent;
+  cursor: pointer;
+  background: transparent;
+  color: #64748b;
+}
+
+.address-menu {
+  position: absolute;
+  top: 5px;
+  right: 10px;
+  background: #ffffff;
+  width: 100px;
+  border-radius: 5px;
+  padding: 3px;
+  cursor: pointer;
+  box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
+}
+
+.wishlist-image {
+  width: 120px;
+  height: 120px;
+  object-fit: contain;
+  background-position: center center;
+  background-repeat: no-repeat;
+}
+
+.wishlist-rating {
+  font-size: 12px;
+  color: #fff;
+  background-color: #4a51e1;
+  border-radius: 50px;
+  padding: 1.5px 10px;
+}
+
+.wishlist-price-wrap {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  gap: 5px;
+}
+
+.wishlist-price {
+  font-size: 13px;
+  color: #878787;
+  font-weight: 500;
+  text-decoration: line-through;
+}
+
+.wishlist-discount {
+  font-size: 12px;
+  font-weight: 500;
+  color: #16a34a;
+}
+
+.wishlist-icon {
+  width: 20px;
+  height: 20px;
+  cursor: pointer;
+  transition: all 0.2s ease-in-out;
+}
+
+.wishlist-discount_price {
+  font-size: 20px;
+  font-weight: 500;
+}
+
+.wishlist-delete {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  cursor: pointer;
+  font-size: 18px;
+  padding: 5px;
+  border-radius: 50%;
+  transition: all 0.2s ease-in-out;
+}
+
+.phoneNumber .react-international-phone-input {
+  padding: 20px 10px !important;
+  font-size: 100%;
+  width: 100%;
+  font-size: 15px !important;
+  border-radius: 0 0.5rem 0.5rem 0;
+}
+
+.phoneNumber .react-international-phone-country-selector button {
+  padding: 20px 10px;
+  border-radius: 0.5rem 0 0 0.5rem;
+}
+
+.phoneNumber.error-show .react-international-phone-input {
+  border-color: rgb(248 10 55);
+  background-color: rgb(255 243 245);
+}
+
+.phoneNumber.error-show .react-international-phone-country-selector button {
+  border-color: rgb(248 10 55);
+  background-color: rgb(255 243 245);
+}
