--- a/frontend/src/components/Route/Profile/Accounts.css
+++ b/frontend/src/components/Route/Profile/Accounts.css
@@ -104,3 +104,9 @@
   border-color: rgb(248 10 55);
   background-color: rgb(255 243 245);
 }
+
+.custom-checkbox {
+  width: 16px;
+  height: 16px;
+  border-radius: 100%;
+}
